Revert "[ML] fix page overflow"
This reverts commit 3c869228

--- a/x-pack/plugins/ml/public/application/timeseriesexplorer/_timeseriesexplorer.scss
+++ b/x-pack/plugins/ml/public/application/timeseriesexplorer/_timeseriesexplorer.scss
@@ -1,4 +1,6 @@
 .ml-time-series-explorer {
+  width: 100%;
+  display: inline-block;
   color: $euiColorDarkShade;
 
   .no-results-container {
@@ -29,6 +31,8 @@
   }
 
   .results-container {
+    padding: $euiSize;
+
     .panel-title {
       font-size: $euiFontSizeM;
       font-weight: 400;
@@ -42,6 +46,8 @@
   }
 
   .series-controls {
+    padding: $euiSize $euiSize 0px $euiSize;
+
     div.entity-controls {
       display: inline-block;
       padding-left: $euiSize;
